--- a/JavaScript Assignments/Pizza_Order/pizza_order.html
+++ b/JavaScript Assignments/Pizza_Order/pizza_order.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="C:\JS_Assignments\JavaScript Assignments\Pizza_Order\pizza_order.css">
 </head>
 <body>
-    <form name="pizza_delivery">
+    <form>
         <label for="name">Name:</label>
-        <input type="text" id="name_1" name="name"><br><br>
+        <input type="text" id="name_1" name="name" required><br><br>
         <label for="name">Email:</label>
-        <input type="email" name="mail" id="mail">
+        <input type="email" name="mail" id="mail" required>
         <h3>Toppings:</h3>
         Extra Cheese:<input type="checkbox" name="Toppings">
         Pepperoni:<input type="checkbox" name="Toppings">
@@ -23,21 +23,21 @@
         Tomatoes:<input type="checkbox" name="Toppings">
         Mushrooms:<input type="checkbox" name="Toppings">
         <h3>How do you want to get your Pizza!</h3>
-        Delivery<input type="radio" name="order">Pickup<input type="radio" name="order"><br><br>
+         Delivery<input type="radio" name="order">Pickup<input type="radio" name="order"><br><br>
         <label for="tip" id="sorting">Tip?</label>
-        <select name="tip_values" id="values">
+        <select name="tip_values" id="values" required>
             <option value="15%" selected>15%</option>
             <option value="20%" >20%</option>
             <option value="25%">25%</option>
         </select>
         <hr/>
         <h3>Address:</h3>
-        <textarea name="address" id="address" cols="30" rows="10"></textarea><br>
+        <textarea name="address" id="address" cols="30" rows="10" required></textarea><br>
         <br>
-        <button type="submit" id="submit" onclick="submit_m()">Submit</button>
+        <button type="submit" id="submit" onclick="return submit_m()">Submit</button>
         <button type="reset">Reset</button>
-        <button type="button" onclick="myfunction()" id="sub_s" disabled>Submit Summary</button>
-        <table id="displaytable">
+        <button type="submit" onclick="myfunction()" id="sub_s">Submit Summary</button>
+        <table border="1">
             <caption>Pizza Order Summary.</caption>
                 <tr>
                 <td>Name:</td>
